salesforce-package/force-app/main/default/objects/Zendesk_Settings__mdt/Zendesk_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Stores Zendesk API credentials and configuration for integrating Salesforce Cases with Zendesk tickets.</description>
    <label>Zendesk Settings</label>
    <pluralLabel>Zendesk Settings</pluralLabel>
</CustomObject>