salesforce-package/force-app/main/default/objects/Zendesk_Settings__mdt/fields/API_Token__c.field-meta.xml
<CustomField>
    <fullName>API_Token__c</fullName>
    <description>Zendesk API token for authentication. Generate this from Zendesk Admin Center under Apps and Integrations > APIs > Zendesk API.</description>
    <label>API Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>