salesforce-package/force-app/main/default/objects/Zendesk_Settings__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address of the Zendesk agent/admin account used for API authentication</description>
    <label>Email</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>