salesforce-package/force-app/main/default/objects/Zendesk_Settings__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable Zendesk integration</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>