salesforce-package/force-app/main/default/objects/Zendesk_Settings__mdt/fields/Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Subdomain__c</fullName>
    <description>Your Zendesk subdomain (e.g., if your URL is mycompany.zendesk.com, enter mycompany)</description>
    <label>Subdomain</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>